--- a/r_calendar-0.1.7/example/pubspec.yaml
+++ b/r_calendar-0.1.7/example/pubspec.yaml
@@ -1,4 +1,4 @@
-name: cloundapp
+name: r_calendar_example
 description: A new Flutter application.
 
 # The following defines the version and build number for your application.
@@ -14,46 +14,22 @@ description: A new Flutter application.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.2.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
+  flutter_localizations:
+    sdk: flutter
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  fluro: any
-  crypto: any
-  flutter_slidable_list_view: ^1.2.8
-  flutter_picker: any
-  dio: any
-  shared_preferences: any
-  fluttertoast: any
-  connectivity: any
-  flutter_html: ^0.10.1+hotfix.1
-#  flutter_sujian_select: any
-  flutter_sujian_select:
-    path: ../cloundapp/flutter_sujian_select-1.0.1
-
-#  r_calendar: any
   r_calendar:
-    path: ../cloundapp/r_calendar-0.1.7
-
-
-  url_launcher: any
-  image_picker: any
-  image_cropper: 1.1.2
-  event_bus: any
-#  bmap_map_fluttify: ^0.0.1
-#  location: any
-
-
-
+    path: ../
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  flutter_l10n: ^0.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -67,52 +43,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  assets:
-    - assets/images/workstationoff.png
-    - assets/images/workstation.png
-    - assets/images/salary.png
-    - assets/images/agreenment.png
-    - assets/images/attendance.png
-    - assets/images/customer.png
-    - assets/images/target.png
-    - assets/images/business.png
-    - assets/images/askfor.png
-    - assets/images/check.png
-    - assets/images/work.png
-    - assets/images/indexoff.png
-    - assets/images/index.png
-    - assets/images/contract.png
-    - assets/images/contractoff.png
-    - assets/images/thread.png
-    - assets/images/infomation.png
-    - assets/images/meoff.png
-    - assets/images/me.png
-    - assets/images/recruit.png
-    - assets/images/means.png
-    - assets/images/name.png
-    - assets/images/changepw.png
-    - assets/images/update.png
-    - assets/images/aboutus.png
-    - assets/images/zhuxiao.png
-    - assets/images/logo.png
-    - assets/images/head.png
-    - assets/images/current.png
-    - assets/images/currentbusiness.png
-    - assets/images/future.png
-    - assets/images/futurebusiness.png
-    - assets/images/splash.png
-    - assets/images/qunxinlogo.png
-    - assets/images/loading.gif
-    - assets/images/attendanceicon.png
-    - assets/images/attendancesuccess.png
-    - assets/images/attendancefail.png
-    - assets/images/larm.png
-    - assets/images/cross.png
-
-
-
-
-
+  # assets:
+  #  - images/a_dot_burr.jpeg
+  #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
